Code committed for SFDC-407 , 408 and 414.

--- a/src/classes/Action.cls
+++ b/src/classes/Action.cls
@@ -6,7 +6,8 @@ public class Action {
     @AuraEnabled public string templateId {get; set;}
     @AuraEnabled public string templateName {get; set;}
     @AuraEnabled public string type {get; set;}
-    
+    @AuraEnabled public string emailType {get; set;}
+    @AuraEnabled public string deliveryPreference {get; set;}
     
     public Action (){
         
@@ -22,4 +23,17 @@ public class Action {
         templateName = actionTemplateName;
         type = actionType;
     }
+    public Action (Id actionId, string actionActivationType, string actionName, string actionTaskDescription, 
+                   string ActionTemplateId, string actionTemplateName, string actionType, string actioEmailType,
+                   string actionDeliveryPreference){
+                       id = actionId;
+                       activationType = actionActivationType;
+                       name = actionName;
+                       taskDescription = actionTaskDescription;
+                       templateId = ActionTemplateId;
+                       templateName = actionTemplateName;
+                       type = actionType;
+                       emailType = actioEmailType;
+                       deliveryPreference = actionDeliveryPreference;
+                   }
 }
