'SFDC-407-414-408 - Code committed for code review changes.

--- a/src/classes/CadenceConstants.cls
+++ b/src/classes/CadenceConstants.cls
@@ -20,6 +20,8 @@ public with sharing class CadenceConstants {
     
     public static final String OPPORTUNITY_ROLE_OBJECT_NAME = 'OpportunityContactRole';
     
+    public static final String SFDC_EMAIL_TYPE = 'SFDC';
+    public static final String NATIVE_EMAIL_TYPE = 'NATIVE';
 	//cadence criterion types
     public static final String CRITERION_TYPE_ENTRY = 'Entry';
     public static final String CRITERION_TYPE_EXIT = 'Exit'; 
